# whisper_ui

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  flake.nix
.builds/: fedora.yml
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
src/: app.rs  audio.rs  main.rs  models.rs  whisper.rs
src-tauri/: Cargo.toml  tauri.conf.json
