[package]
name = "whisper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-std = { version = "1.12.0", default-features = false }
hf-hub = "0.3.2"
iced = { version = "0.12.1", features = ["async-std"] }
once_cell = "1.19.0"
rfd = "0.14.1"
whisper-rs = "0.11.1"
