[package]
name = "whisper"
version = "0.1.0"
edition = "2021"
description = "A simple GUI for traanscribing audio files"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
product-name = "whisper ui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-std = { version = "1.12.0", default-features = false }
catppuccin = "2.2.0"
hf-hub = "0.3.2"
iced = { version = "0.13.0-dev", features = ["async-std"], git = "https://github.com/iced-rs/iced.git" }
once_cell = "1.19.0"
rfd = "0.14.1"
whisper-rs = "0.11.1"
